Add further tests for the pooling issue we've been seeing